--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_04/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Pandas_I.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_04/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Pandas_I.ipynb
@@ -48,10 +48,7 @@
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -62,15 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "titulos = [\"Toy Story 4\", \"Los Incríbles 2\", \"Buscando a Dory\", \"Toy Story 3\", \"Caco\", \"Inside Out\", \"Monsters University\", \"Up\"]\n",
     "lanzamiento = [2015, 2018, 2016, 2010, 2017, 2015, 2013, 2006]\n",
     "recaudaciones = [1073, 1242, 1029, 1067, 807, 857, 744, 735]  # En millones de dólares\n",
-    "espectadores = [74.91, 93.42, 76.72, 81.35, 62.75, 68.27, 54.74, 54.34] # En millones, estimación hecha por aficionados\n"
+    "espectadores = [74.91, 93.42, 76.72, 81.35, 62.75, 68.27, 54.74, 54.34] # En millones, estimación hecha por aficionados"
    ]
   },
   {
@@ -78,11 +74,7 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "serie_lanzamiento = pd.Series(lanzamiento, index = titulos, name = \"lanzamiento\")\n",
-    "serie_recaudaciones = pd.Series(recaudaciones, index = titulos, name = \"recaudaciones\")\n",
-    "serie_espectadores = pd.Series(espectadores, index = titulos, name = \"espectadores\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -108,9 +100,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "serie_lanzamiento"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -143,10 +133,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "copia_profit = serie_recaudaciones.sort_values(ascending = False)\n",
-    "copia_profit"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -172,10 +159,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "serie_recaudaciones.sort_values(ascending = False, inplace= True)\n",
-    "serie_recaudaciones"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -211,22 +195,14 @@
      ]
     }
    ],
-   "source": [
-    "for titulo,recaudacion in serie_recaudaciones.items():\n",
-    "    lanzamiento = serie_lanzamiento[titulo]\n",
-    "    espectadores = serie_espectadores[titulo]\n",
-    "    precio_entrada = round(recaudacion/espectadores,2)\n",
-    "    print(f\"{titulo}: Es del {lanzamiento}, recaudó {recaudacion} millones, {espectadores} millones de espectadores, {precio_entrada}$ por entrada\")\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "serie_precio_entrada = serie_recaudaciones/serie_espectadores"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -252,9 +228,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "serie_precio_entrada"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -280,12 +254,7 @@
      ]
     }
    ],
-   "source": [
-    "pelicula_menor_recaudacion = serie_recaudaciones.idxmin()\n",
-    "print(pelicula_menor_recaudacion)\n",
-    "anyo_menor = serie_lanzamiento[serie_recaudaciones.index.get_loc(pelicula_menor_recaudacion)]\n",
-    "print(f\"{pelicula_menor_recaudacion} es la de menor recaudación y salió en {anyo_menor}\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -310,10 +279,7 @@
     }
    ],
    "source": [
-    "filtro_pelicula = (serie_recaudaciones > 1000) & (serie_espectadores < 75)\n",
-    "print(filtro_pelicula)\n",
-    "nombre_pelicula = serie_recaudaciones[(serie_recaudaciones > 1000) & (serie_espectadores < 75)].idxmax()\n",
-    "print(nombre_pelicula)\n"
+    "\n"
    ]
   },
   {
@@ -337,11 +303,7 @@
      ]
     }
    ],
-   "source": [
-    "edad_gonzalo = 30\n",
-    "edad_gonzalo_en_estreno = edad_gonzalo - (2023 - serie_lanzamiento)\n",
-    "print(edad_gonzalo_en_estreno)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -365,15 +327,7 @@
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "serie_lanzamiento[\"Toy Story 4\"]  = 2019\n",
-    "serie_lanzamiento[\"Up\"] = 2009\n",
-    "serie_recaudaciones[\"Monsters University\"] = 754\n",
-    "titulos_corregidos = [titulo.replace(\"Caco\",\"Coco\").replace(\"Incríbles\",\"Increíbles\") for titulo in titulos]\n",
-    "serie_recaudaciones = pd.Series(recaudaciones, index = titulos_corregidos).sort_values(ascending = False)\n",
-    "serie_espectadores.index = titulos_corregidos\n",
-    "serie_lanzamiento.index = titulos_corregidos"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -399,10 +353,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "serie_recaudaciones\n",
-    "serie_lanzamiento"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -501,12 +452,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "precio = round(serie_recaudaciones/serie_espectadores,2)\n",
-    "serie_4_pn = np.array(precio)\n",
-    "serie_4 = pd.DataFrame(serie_4_pn, columns = [\"tickets\"], index = titulos_corregidos)\n",
-    "serie_4\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -609,11 +555,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "data = { \"lanzamiento\": serie_lanzamiento, \"recaudacion\": serie_recaudaciones, \"espectadores\": serie_espectadores}\n",
-    "df = pd.DataFrame(data)\n",
-    "df"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -637,12 +579,7 @@
      ]
     }
    ],
-   "source": [
-    "anyo_actual = 2023\n",
-    "antiguedad = 10\n",
-    "pelicula_10_anyo = df[df[\"lanzamiento\"] < anyo_actual - antiguedad]\n",
-    "print(f\"la pelicula con más de 10 años: {pelicula_10_anyo}\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -668,9 +605,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df[\"lanzamiento\"] < anyo_actual - antiguedad"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -759,10 +694,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "peliculas_mas_65_mas_800 = df[(df[\"espectadores\"] > 65) & (df[\"recaudacion\"] > 800)]\n",
-    "peliculas_mas_65_mas_800"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -776,9 +708,7 @@
    "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df[\"Ingreso_por_espectador\"] = df.recaudacion/df.espectadores"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -899,9 +829,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "display(df)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1030,10 +958,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df_sorted = df.sort_values(by = \"lanzamiento\")\n",
-    "df_sorted"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1162,9 +1087,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df_sorted.sort_values(by = \"Ingreso_por_espectador\", ascending = False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1294,10 +1217,7 @@
     }
    ],
    "source": [
-    "df_sorted.loc[\"Toy Story 4\",\"lanzamiento\"] = 2014\n",
-    "df_sorted.loc[\"Up\",\"lanzamiento\"] = 2006\n",
-    "df_sorted.loc[\"Monsters University\",\"recaudacion\"] = 744\n",
-    "df_sorted\n"
+    "\n"
    ]
   },
   {
@@ -1305,9 +1225,7 @@
    "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_sorted.index = [indice.replace(\"Coco\",\"Caco\").replace(\"Increíbles\",\"Incríbles\") for indice in df_sorted.index]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1429,9 +1347,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df_sorted"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1569,10 +1485,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df_sin_indice =  df.reset_index()\n",
-    "df_sin_indice.rename(columns = {\"index\": \"Peliculas\"})"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1703,9 +1616,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df_sin_indice"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1836,10 +1747,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df_sin_indice.columns = [col.replace(\"index\",\"Peliculas\") for col in df_sin_indice.columns]\n",
-    "df_sin_indice"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1970,37 +1878,6 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df_sin_indice.set_index(\"lanzamiento\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'serie_espectadores' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\edici\\PRODUCCION\\Repos_Curso\\DS_Online_Oct23_Exercises\\02_Programacion_y_Herramientas_Avanzadas\\Sprint_04\\Unidad_01\\Practica_Obligatoria\\18_Practica_Obligatoria_Pandas_I.ipynb Celda 52\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/edici/PRODUCCION/Repos_Curso/DS_Online_Oct23_Exercises/02_Programacion_y_Herramientas_Avanzadas/Sprint_04/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Pandas_I.ipynb#Y102sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(serie_espectadores)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/edici/PRODUCCION/Repos_Curso/DS_Online_Oct23_Exercises/02_Programacion_y_Herramientas_Avanzadas/Sprint_04/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Pandas_I.ipynb#Y102sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEl importante\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mlen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mesto es una prueba\u001b[39m\u001b[39m\"\u001b[39m))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'serie_espectadores' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print(serie_espectadores)\n",
-    "print(\"El importante\", len(\"esto es una prueba\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
@@ -2020,7 +1897,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
