--- a/Project_Break_I__EDA/0-Proyecto_EDA.ipynb
+++ b/Project_Break_I__EDA/0-Proyecto_EDA.ipynb
@@ -44,7 +44,7 @@
     "* **El proyecto es individual**\n",
     "\n",
     "* **Datos**: Tienes que conseguir los datos por tu cuenta (ver pasos del proyecto y datos)\n",
-    "* **Fecha de Entrega del Tema del EDA**: Hasta el jueves 12 de diciembre (te recomendamos no apurar a esta fecha o no tendrás tiempo para finalizar el EDA).\n",
+    "* **Fecha de Entrega del Tema del EDA**: Hasta el sábado 14 de diciembre, usando este [formulario](https://forms.gle/Xsqp57xMSyhK8yuj9).\n",
     "* **Fecha de Entrega Final de la Presentación**: Hasta el jueves 19 de diciembre.\n",
     "* **Todas las entregas se realizarán en el foro que habilitaremos en el Campus Virtual, mediante enlace a vuestro repositorio personal en GitHub.**\n",
     "* **El proyecto lo expondréis en un vídeo** *(pendiente de determinar el medio de entrega del vídeo)*\n",
@@ -102,18 +102,47 @@
     "Si además te sientes con ganas de más, es totalmente opcional combinar tu presentación con un dashboard desarrollado con alguna de las herramientas que vamos a aprender durante el curso.\n",
     "\n",
     "**¿Formato de entrega?** Lo has adivinado, el formato de entrega de esta presentación será un VÍDEO de no más de 7 minutos (límite estricto máximo).\n",
-    "Pero no te asustes, si no tienes experiencia capturando pantalla o editando vídeos, **te recomendamos que uses Google Slides para realizar tanto la presentación como el vídeo**, ya que tiene una funcionalidad que permite grabarte presentando (incluye hasta un cronómetro que indica la duración del vídeo, ¡así que no hay excusas para pasarse de los 7 minutos!).\n",
+    "Pero no te asustes, si no tienes experiencia capturando pantalla o editando vídeos, **lee un poco más abajo la sección vídeo**, ya que tiene una funcionalidad que permite grabarte presentando (incluye hasta un cronómetro que indica la duración del vídeo, ¡así que no hay excusas para pasarse de los 7 minutos!).\n",
     "Es totalmente gratuito y lo único que necesitas es una cuenta de correo de Gmail.\n",
     "\n",
     "**Consejos**: Tu presentación es tu apoyo a la hora de exponer tu proyecto, el protagonista es tu discurso. Procura que la presentación no sea un conjunto de puntos inconexos e intenta llevar un hilo, como si de una historia se tratase. Véndete, y muy importante, destaca las fortalezas de tu trabajo sobre las debilidades. Si vas a contar algo de negocio, ¿puedes traducirlo a números? ¿Qué impacto tendrá tu analítica?. Muestra algunos datos concretos (estadísticos simples) para justificar tu *business case* o para cerrar tu presentación. Si has elegido una temática que está acorde con tus gustos/background, aprovecha al principio para contarlo y empatizar mucho más con quien vea tu presentación.\n",
     "\n",
-    "**NOTA**: existen muchas plantillas gratuitas en la web para hacer presentaciones, aquí tienes unas cuantas:\n",
+    "**NOTA**: existen muchas plataformas y webs con plantillas gratuitas para hacer presentaciones, aquí tienes unas cuantas:\n",
+    "> [Genially](https://genially.com/es/)  \n",
+    "> [Canva](https://www.canva.com/presentations/templates/)  \n",
     "> [Microsoft](https://create.microsoft.com/en-us/powerpoint-templates)\n",
     "> [Slidesgo](https://slidesgo.com/)  \n",
     "> [Slidecore](https://slidecoretemplates.com/)  \n",
     "> [Slides Carnival](https://www.slidescarnival.com/)  \n",
-    "> [Canva](https://www.canva.com/presentations/templates/)  \n",
-    "> [Free-powerpoint-templates-design](https://www.free-powerpoint-templates-design.com/free-powerpoint-templates-design/)  "
+    "> [Free-powerpoint-templates-design](https://www.free-powerpoint-templates-design.com/free-powerpoint-templates-design/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vídeo\n",
+    "\n",
+    "Aunque en las sesiones os recomendamos utilizar Presentaciones de Google para realizar tanto la presentación como el vídeo, por conveniencia de la herramienta, varios compañer@s nos han avisado de que la función de grabación no funciona en todas las cuentas de Gmail ya que **se necesita una cuenta de pago tipo Workspace**, pero que que no cunda el pánico.  \n",
+    "\n",
+    "Si no tenéis una cuenta Workspace de Google, podéis seguir aprovechando la herramienta para hacer la presentación o valorar otras opciones más adecuadas a vuestra situación personal. \n",
+    "\n",
+    "Aquí tenéis una lista de posibles alternativas:\n",
+    "- Microsoft Powerpoint:\n",
+    "    - La herramienta de presentaciones por excelencia, también tiene función de grabar.\n",
+    "    - **Evidente necesita licencia, pero si ya lo tenéis instalado -> problema resuelto.**\n",
+    "    - Si ya habéis empezado la presentación en Google, solo tenéis que descargar el archivo en formato .PPTX y abrirlo en Powerpoint para continuar.\n",
+    "- Presentaciones de Google:\n",
+    "    - Lamentablemente, solo se puede acceder a la función de grabación con una cuenta de pago de tipo Google Workspace. \n",
+    "    - Existe la posibilidad de crear una cuenta de prueba gratuita de 14 días, pero pensad que la entrega del proyecto de ML/DL también será en vídeo, así que si lo hacéis usad una cuenta de correo secundaria.\n",
+    "- [Loom](https://www.loom.com/):\n",
+    "    - Loom es un capturador de pantalla que permite grabar toda vuestra pantalla y compartir los vídeos resultantes.\n",
+    "    - Su versión gratuita permite grabar como máximo vídeos de 5 minutos.\n",
+    "    - Existe la posibilidad de crear una cuenta de prueba gratuita de 14 días para grabar vídeos sin límite de duración, pero tened en cuenta que la entrega del proyecto de ML/DL también será en vídeo, así que si lo hacéis usad una cuenta de correo secundaria.\n",
+    "- [OBS Studio](https://obsproject.com/es/download):\n",
+    "    - El capturador de pantalla open source por excelencia.\n",
+    "    - Totalmente gratuito, tiene funcionalidades para captura de pantalla, streaming, etc.\n",
+    "    - Es la opción más potente para hacer el vídeo, pero también la más difícil de configurar y utilizar."
    ]
   },
   {
