--- a/Project_Break_I_EDA/0-Proyecto_EDA.ipynb
+++ b/Project_Break_I_EDA/0-Proyecto_EDA.ipynb
@@ -33,7 +33,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -47,7 +46,7 @@
     "* **Fecha de Entrega del Tema del EDA**: Hasta el sábado 14 de diciembre, usando este [formulario](https://forms.gle/Xsqp57xMSyhK8yuj9).\n",
     "* **Fecha de Entrega Final de la Presentación**: Hasta el jueves 19 de diciembre.\n",
     "* **Todas las entregas se realizarán en el foro que habilitaremos en el Campus Virtual, mediante enlace a vuestro repositorio personal en GitHub.**\n",
-    "* **El proyecto lo expondréis en un vídeo** *(pendiente de determinar el medio de entrega del vídeo)*\n",
+    "* **El proyecto lo expondréis en un vídeo** *(``opciones enviadas por e-mail y abajo``)*\n",
     "\n",
     "\n",
     "## Objetivo\n",
@@ -57,28 +56,30 @@
     "## Evaluación\n",
     "1. **Presentación** (60%) presentación + vídeo de no más de 7 minutos donde expondrás tu caso (ver apartado Presentación)\n",
     "\n",
-    "2. **Memoria** (20%) un jupyter notebook donde explicarás qué es el desarrollo del proyecto con markdown y código de python de forma resumida.\n",
+    "2. **Memoria** (20%) Realiza un pdf a modo dossier estructurado que incluya contexto, hipótesis, análisis: univariante, bivariante, multivariante, visualizaciones relevantes, conclusiones y recomendaciones basadas en los hallazgos.\n",
     "3. **Código** (10%) hay que entregar todo el código desarrollado. Tendremos en cuenta el tipo solución, la limpieza y orden, el código documentado, etc.\n",
     "4. **Subir el proyecto a tu GitHub personal**. (10%) Este gran esfuerzo tiene que ser compartido, y te recomendamos que te crees un repositorio en GitHub para el proyecto. En caso de que el proyecto se componga de datos sensibles, consultar con el equipo docente.\n",
     "\n",
     "\n",
     "## Entregable\n",
-    "Consistirá en un repositorio dentro de tu GitHub personal con el nombre de \"EDA_Entrega\" y dentro del mismo deben aparecer:\n",
-    "* Presentación (solo la presentación, **el vídeo NO hay que subirlo a GitHub**)\n",
+    "Consistirá en un repositorio dentro de tu GitHub personal con el nombre de \"EDA_[temática-del-proyecto]\" y dentro del mismo deben aparecer (``ejemplo abajo``):\n",
+    "* Carpeta src (ver abajo)\n",
+    "* Memoria (ver arriba)\n",
+    "* Presentación (solo la presentación en pdf) (**el vídeo NO es necesario subirlo a GitHub**)\n",
+    "* Fichero README en markdown (README.md ver abajo)\n",
+    "* main.ipynb (version final del notebook)\n",
     "\n",
-    "* Memoria\n",
-    "* Código (ver más abajo)\n",
-    "* Documentación utilizada\n",
-    "* Fichero README en markdown (README.md ver más abajo)\n",
+    "<img src=\"./img/pagina_principal_github.png\" alt=\"pagina_principal_github\" width=\"750\" height=\"450\">\n",
     "\n",
     "\n",
-    "El codigo deberá seguir la siguiente estructura de carpetas:\n",
-    "1. src/: aquí irá todo el código\n",
     "\n",
-    "2. src/data: todos los archivos de datos utilizados en el analisis. No subir a GitHub archivos demasiado pesados. [Si tus datos son muy grandes sube únicamente una muestra que permita ejecutar el código]\n",
-    "3. src/notebooks: los notebooks usados para pruebas.\n",
-    "4. src/utils: todos los modulos, funciones auxiliares o clases creados para el desarrollo del proyecto.\n",
-    "5. src/memoria.ipynb: en este notebook tendrás que resumir de forma clara y ordenada todos los pasos de la analítica.  \n",
+    "El codigo deberá seguir la siguiente estructura de carpetas (``ejemplo abajo``):\n",
+    "1. ``src/data``: todos los archivos de datos utilizados en el analisis. No subir a GitHub archivos demasiado pesados. [Si tus datos son muy grandes sube únicamente una muestra que permita ejecutar el código]\n",
+    "2. ``src/img``: Imagenes que hayas necesitado para tu proyecto. \n",
+    "3. ``src/notebooks``: los notebooks usados para pruebas.\n",
+    "4. ``src/utils``: todos los modulos, funciones auxiliares o clases creados para el desarrollo del proyecto.\n",
+    "\n",
+    "<img src=\"./img/contenido_src.png\" alt=\"pagina_principal_github\" width=\"200\" height=\"400\">\n",
     "\n",
     "\n",
     "**README**: hay que crear un README con una descripción de tu proyecto. Breve. El objetivo de este README es enterarse de forma rápida de qué va tu proyecto y qué tecnologías has utilizado para llevarlo a cabo, no es más que un escaparate de tu trabajo. Hay que ir documentando bien los trabajos para acabar el bootcamp con un buen portfolio. En [este enlace](https://github.com/alexhuang1117/Data-Science-Portfolio) tienes un ejemplo de cómo se pueden documentar los proyectos en tu GitHub. Encontrarás en el notebook de markdown todo lo que necesitas para crear un README decente.\n",
