--- a/Masterclass/Kaggle/Kaggle_submission.ipynb
+++ b/Masterclass/Kaggle/Kaggle_submission.ipynb
@@ -1287,7 +1287,7 @@
     "            print(\"Check the names of the columns and try again\")\n",
     "    else:\n",
     "        print(\"Check the number of rows and/or columns and try again\")\n",
-    "        print(\"\\nMensaje secreto de Iván y Lucas: No me puedo creer que después de todo este notebook hayas hecho algún cambio en las filas de `test.csv`. Lloro.\")"
+    "        print(\"\\nMensaje secreto del TA: No me puedo creer que después de todo este notebook hayas hecho algún cambio en las filas de `test.csv`. Lloro.\")"
    ]
   },
   {
