--- a/04_Machine_Learning/Sprint_15/Unidad_02/Live_Session/Entornos_Virtuales.ipynb
+++ b/04_Machine_Learning/Sprint_15/Unidad_02/Live_Session/Entornos_Virtuales.ipynb
@@ -48,6 +48,47 @@
     "     nombre_entorno\\Scripts\\Activate.ps1 # Desde una powershell\n",
     "     ```\n",
     "\n",
+    "     <details>\n",
+    "     <summary><strong>Solución al error de ejecución de scripts en PowerShell</strong></summary>\n",
+    "     <p>\n",
+    "\n",
+    "     Si recibes el error:\n",
+    "     ```\n",
+    "     \"No se puede cargar el archivo C:\\Users\\...\\Activate.ps1 porque la ejecución de scripts está deshabilitada en este sistema.\"\n",
+    "     ```\n",
+    "\n",
+    "     Tienes varias opciones para solucionarlo:\n",
+    "\n",
+    "     1. **Solución temporal** (solo para la sesión actual):\n",
+    "     ```powershell\n",
+    "     Set-ExecutionPolicy Unrestricted -Scope Process\n",
+    "     ```\n",
+    "\n",
+    "     2. **Solución permanente** (elegir una):\n",
+    "     ```powershell\n",
+    "     # Para tu usuario solamente (recomendado)\n",
+    "     Set-ExecutionPolicy Unrestricted -Scope CurrentUser\n",
+    "\n",
+    "     # Para todo el sistema (requiere permisos de administrador)\n",
+    "     Set-ExecutionPolicy Unrestricted -Scope LocalMachine\n",
+    "     ```\n",
+    "\n",
+    "     3. **Solución más segura** (recomendada):\n",
+    "     ```powershell\n",
+    "     # Permite solo scripts firmados y locales\n",
+    "     Set-ExecutionPolicy RemoteSigned -Scope CurrentUser\n",
+    "     ```\n",
+    "\n",
+    "     **Importante**: \n",
+    "     - `Unrestricted` permite ejecutar cualquier script\n",
+    "     - `RemoteSigned` es más seguro: permite scripts locales pero requiere firma digital para scripts descargados\n",
+    "     - Usar `CurrentUser` es más seguro que `LocalMachine`\n",
+    "     - Para verificar la política actual: `Get-ExecutionPolicy -List`\n",
+    "\n",
+    "     </p>\n",
+    "     </details>\n",
+    "     <br>\n",
+    "\n",
     "   - **En macOS y Linux**, ejecuta:\n",
     "     ```bash\n",
     "     source nombre_entorno/bin/activate\n",
