--- a/04_Machine_Learning/Sprint_15/Unidad_02/Live_Session/Entornos_Virtuales.ipynb
+++ b/04_Machine_Learning/Sprint_15/Unidad_02/Live_Session/Entornos_Virtuales.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Crear un Entorno Virtual con `venv`\n",
+    "### 1. Crear un Entorno Virtual con `venv`\n",
     "\n",
     "`venv` es un módulo disponible por defecto en Python 3.3 y versiones posteriores que se utiliza para crear entornos virtuales. Aquí te dejo una guía paso a paso para crear y activar un entorno virtual con `venv`:\n",
     "\n",
@@ -43,10 +43,15 @@
     "   Una vez creado el entorno virtual, el siguiente paso es activarlo. La forma de activar el entorno virtual varía dependiendo del sistema operativo.\n",
     "\n",
     "   - **En Windows**, ejecuta:\n",
+    "     ```bash\n",
+    "     source nombre_entorno/Scripts/activate # Desde GitBash\n",
+    "     ```\n",
+    "\n",
     "     ```cmd\n",
     "     nombre_entorno\\Scripts\\activate.bat # Desde una shell o terminal normal\n",
     "     nombre_entorno\\Scripts\\Activate.ps1 # Desde una powershell\n",
     "     ```\n",
+    "    \n",
     "\n",
     "     <details>\n",
     "     <summary><strong>Si la ejecución de scripts en PowerShell te da error, abre este desplegable</strong></summary>\n",
@@ -115,7 +120,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Buenas Prácticas con Control de Versiones\n",
+    "### 2. Instalación de Paquetes en el Entorno Virtual\n",
+    "\n",
+    "Una vez activado el entorno virtual, puedes instalar paquetes usando pip. Por ejemplo:\n",
+    "```bash\n",
+    "pip install numpy pandas scikit-learn\n",
+    "```\n",
+    "Los paquetes se instalarán solo en el entorno virtual actual, manteniendo limpio tu entorno global."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Buenas Prácticas con Control de Versiones\n",
     "\n",
     "Cuando trabajas con entornos virtuales y sistemas de control de versiones como Git, **es importante evitar subir el entorno virtual al repositorio**. Los entornos virtuales pueden ser muy pesados y son específicos de cada sistema.\n",
     "\n",
@@ -144,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Gestión de Dependencias con `requirements.txt`\n",
+    "### 4. Gestión de Dependencias con `requirements.txt`\n",
     "\n",
     "Un archivo `requirements.txt` es fundamental para documentar y compartir las dependencias de tu proyecto. Este archivo lista todos los paquetes de Python necesarios para ejecutar tu proyecto.\n",
     "\n",
@@ -165,20 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Instalación de Paquetes en el Entorno Virtual\n",
-    "\n",
-    "Una vez activado el entorno virtual, puedes instalar paquetes usando pip. Por ejemplo:\n",
-    "```bash\n",
-    "pip install numpy pandas scikit-learn\n",
-    "```\n",
-    "Los paquetes se instalarán solo en el entorno virtual actual, manteniendo limpio tu entorno global."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Alternativas a `venv`\n",
+    "### 5. Alternativas a `venv`\n",
     "\n",
     "Existen otras herramientas populares para la gestión de entornos virtuales:\n",
     "\n",
