New update Entornos_Virtuales.ipynb

--- a/04_Machine_Learning/Sprint_15/Unidad_02/Live_Session/Entornos_Virtuales.ipynb
+++ b/04_Machine_Learning/Sprint_15/Unidad_02/Live_Session/Entornos_Virtuales.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Entornos Virtuales\n",
+    "# ML WrapUp (II): Entornos Virtuales\n",
     "\n",
     "Un **entorno virtual** en Python es un entorno aislado que permite ejecutar proyectos con sus propias dependencias y bibliotecas, independientemente de las bibliotecas instaladas en el entorno global del sistema. Esto es especialmente útil para gestionar las dependencias de diferentes proyectos, ya que permite instalar diferentes versiones de una misma biblioteca en diferentes entornos virtuales sin que estos interfieran entre sí. Al usar entornos virtuales, puedes asegurarte de que tu proyecto sea reproducible y evitar conflictos entre los requisitos de diferentes proyectos.\n",
     "\n"
@@ -31,11 +31,24 @@
     "`venv` es un módulo disponible por defecto en Python 3.3 y versiones posteriores que se utiliza para crear entornos virtuales. Aquí te dejo una guía paso a paso para crear y activar un entorno virtual con `venv`:\n",
     "\n",
     "1. **Crear el Entorno Virtual**:\n",
-    "   Para crear un entorno virtual, necesitas abrir una terminal o línea de comandos y navegar al directorio donde deseas crear el entorno virtual. Luego, ejecuta el siguiente comando, reemplazando `nombre_entorno` con el nombre que deseas darle a tu entorno virtual:\n",
+    "   Para crear un entorno virtual, necesitas abrir una terminal o línea de comandos y navegar al directorio donde deseas crear el entorno virtual. Luego, reemplazando `nombre_entorno` con el nombre que deseas darle a tu entorno virtual, ejecuta uno de los siguientes comandos según tu sistema operativo:\n",
     "\n",
-    "   ```bash\n",
-    "   python -m venv nombre_entorno\n",
-    "   ```\n",
+    "   - **En Windows**:\n",
+    "        ```bash\n",
+    "        python -m venv nombre_entorno\n",
+    "        ```\n",
+    "\n",
+    "   - **En macOS/Linux**:\n",
+    "        ```bash\n",
+    "        python3 -m venv nombre_entorno\n",
+    "        ```\n",
+    "   \n",
+    "   - En algunos sistemas Linux, es posible que necesites instalar primero el paquete python3-venv:\n",
+    "        ```bash\n",
+    "        sudo apt-get install python3-venv  # Para distribuciones basadas en Debian/Ubuntu\n",
+    "        sudo dnf install python3-venv      # Para distribuciones basadas en Red Hat/Fedora\n",
+    "        ```\n",
+    "\n",
     "\n",
     "   Esto creará un directorio llamado `nombre_entorno` (o el nombre que hayas elegido) en tu ubicación actual, conteniendo una copia del intérprete de Python, la biblioteca estándar y varios archivos de soporte.\n",
     "\n",
@@ -45,11 +58,13 @@
     "   - **En Windows**, ejecuta:\n",
     "     ```bash\n",
     "     source nombre_entorno/Scripts/activate # Desde GitBash\n",
+    "     # O alternativamente:\n",
+    "     . nombre_entorno/bin/activate # El punto es equivalente a source\n",
     "     ```\n",
     "\n",
     "     ```cmd\n",
-    "     nombre_entorno\\Scripts\\activate.bat # Desde una shell o terminal normal\n",
-    "     nombre_entorno\\Scripts\\Activate.ps1 # Desde una powershell\n",
+    "     nombre_entorno\\Scripts\\activate.bat # Desde CMD\n",
+    "     nombre_entorno\\Scripts\\Activate.ps1 # Desde PowerShell\n",
     "     ```\n",
     "    \n",
     "\n",
@@ -106,12 +121,14 @@
     "   - **En macOS y Linux**, ejecuta:\n",
     "     ```bash\n",
     "     source nombre_entorno/bin/activate\n",
+    "     # O alternativamente:\n",
+    "     . nombre_entorno/bin/activate # El punto es equivalente a source\n",
     "     ```\n",
     "\n",
     "   Al activar el entorno virtual, verás el nombre del entorno virtual entre paréntesis al inicio de la línea de comandos, indicando que cualquier paquete de Python que instales usando `pip` se instalará localmente en el entorno virtual, sin afectar al entorno global de Python.\n",
     "\n",
     "3. **Desactivar el Entorno Virtual**:\n",
-    "   Para salir del entorno virtual y volver al entorno global, simplemente ejecuta el comando `deactivate` en tu terminal o línea de comandos. Esto restaurará tu entorno a su estado original.\n",
+    "   Para salir del entorno virtual y volver al entorno global, simplemente ejecuta el comando `deactivate` en tu terminal o línea de comandos. Este comando es igual en todos los sistemas operativos y restaurará tu entorno a su estado original.\n",
     "\n",
     "Usar `venv` te permite gestionar las dependencias de tus proyectos de Python de manera eficiente y evitar conflictos entre diferentes proyectos.\n"
    ]
@@ -176,14 +193,74 @@
     "   Para instalar todas las dependencias en un nuevo entorno:\n",
     "   ```bash\n",
     "   pip install -r requirements.txt\n",
-    "   ```\n"
+    "   ```\n",
+    "\n",
+    "3. **Especificar la versión de Python**:\n",
+    "   Es una buena práctica incluir la versión de Python utilizada en tu proyecto. Hay dos enfoques comunes:\n",
+    "\n",
+    "   - En el README del proyecto\n",
+    "\n",
+    "   - En el `requirements.txt`:\n",
+    "     ```plaintext\n",
+    "     # Python 3.8.10\n",
+    "     numpy==1.21.0\n",
+    "     pandas==1.3.0\n",
+    "     ...\n",
+    "     ```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Alternativas a `venv`\n",
+    "### 5. Crear Entornos Virtuales con Versiones Específicas de Python\n",
+    "\n",
+    "Para crear un entorno virtual con una versión específica de Python, primero necesitas tener instalada esa versión en tu sistema. Hay varias formas de hacerlo:\n",
+    "\n",
+    "1. **Usando el ejecutable específico de Python**:\n",
+    "   \n",
+    "   - **En Windows**:\n",
+    "   ```bash\n",
+    "   # Si tienes múltiples versiones instaladas\n",
+    "   py -3.8 -m venv nombre_entorno    # Para Python 3.8\n",
+    "   py -3.9 -m venv nombre_entorno    # Para Python 3.9\n",
+    "   py -3.10 -m venv nombre_entorno   # Para Python 3.10\n",
+    "   ```\n",
+    "\n",
+    "   - **En macOS/Linux**:\n",
+    "   ```bash\n",
+    "   # Si tienes múltiples versiones instaladas\n",
+    "   python3.8 -m venv nombre_entorno    # Para Python 3.8\n",
+    "   python3.9 -m venv nombre_entorno    # Para Python 3.9\n",
+    "   python3.10 -m venv nombre_entorno   # Para Python 3.10\n",
+    "   ```\n",
+    "\n",
+    "2. **Usando pyenv (Recomendado para macOS/Linux)**:\n",
+    "   ```bash\n",
+    "   # Instalar una versión específica de Python\n",
+    "   pyenv install 3.8.10\n",
+    "\n",
+    "   # Crear el entorno virtual con esa versión\n",
+    "   pyenv local 3.8.10\n",
+    "   python -m venv nombre_entorno\n",
+    "   ```\n",
+    "\n",
+    "3. **Verificar la versión del entorno**:\n",
+    "   ```bash\n",
+    "   # Después de activar el entorno\n",
+    "   python --version\n",
+    "   ```\n",
+    "\n",
+    "Notas importantes:\n",
+    "- Asegúrate de tener instalada la versión de Python que deseas usar\n",
+    "- Para proyectos en producción, especifica la versión exacta de Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Alternativas a `venv`\n",
     "\n",
     "Existen otras herramientas populares para la gestión de entornos virtuales:\n",
     "\n",
